MDEV-6396: ANALYZE INSERT/REPLACE is accepted, but does not produce a plan

Add ANALYZE STMT handling into INSERT command.